--- a/gulp/package.json
+++ b/gulp/package.json
@@ -13,6 +13,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
     "gulp-watch": "^5.0.0"
   }
 }
